// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addEncodedMethod 1`] = `
"joinPool(value: MsgJoinPool) {
  return {
    type_url: \\"/cosmos.pools.transfer.v1.MsgJoinPool\\",
    value: MsgJoinPool.encode(value).finish()
  };
}"
`;

exports[`addFromJSONMethod 1`] = `
"joinPool(value: any) {
  return {
    typeUrl: \\"/cosmos.pools.transfer.v1.MsgJoinPool\\",
    value: MsgJoinPool.fromJSON(value)
  };
}"
`;

exports[`addFromPartialMethod 1`] = `
"joinPool(value: MsgJoinPool) {
  return {
    typeUrl: \\"/cosmos.pools.transfer.v1.MsgJoinPool\\",
    value: MsgJoinPool.fromPartial(value)
  };
}"
`;

exports[`addJsonMethod 1`] = `
"joinPool(value: MsgJoinPool) {
  return {
    typeUrl: \\"/cosmos.pools.transfer.v1.MsgJoinPool\\",
    value
  };
}"
`;

exports[`addToJSONMethod 1`] = `
"joinPool(value: MsgJoinPool) {
  return {
    typeUrl: \\"/cosmos.pools.transfer.v1.MsgJoinPool\\",
    value: MsgJoinPool.toJSON(value)
  };
}"
`;

exports[`createTypeRegistry 1`] = `
"export const registry = {
  \\"/cosmos.pools.transfer.v1.MsgJoinPool\\": MsgJoinPool,
  \\"/cosmos.pools.transfer.v1.MsgExitPool\\": MsgExitPool
};"
`;

exports[`toObjectWithEncodedMethods 1`] = `
"export const encoded = {
  joinPool(value: MsgJoinPool) {
    return {
      type_url: \\"/cosmos.pools.transfer.v1.MsgJoinPool\\",
      value: MsgJoinPool.encode(value).finish()
    };
  },

  exitPool(value: MsgExitPool) {
    return {
      type_url: \\"/cosmos.pools.transfer.v1.MsgExitPool\\",
      value: MsgExitPool.encode(value).finish()
    };
  }

};"
`;

exports[`toObjectWithPartialMethods 1`] = `
"export const messages = {
  joinPool(value: MsgJoinPool) {
    return {
      typeUrl: \\"/cosmos.pools.transfer.v1.MsgJoinPool\\",
      value: MsgJoinPool.fromPartial(value)
    };
  },

  exitPool(value: MsgExitPool) {
    return {
      typeUrl: \\"/cosmos.pools.transfer.v1.MsgExitPool\\",
      value: MsgExitPool.fromPartial(value)
    };
  }

};"
`;
